--- a/Frontend/app/index.html
+++ b/Frontend/app/index.html
@@ -25,33 +25,37 @@
         <div class="container">
           <div class="navbar-header">
 
+            <!-- Hamburger -->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="#/">frontend</a>
+            <a class="navbar-brand" href="#/">PizzaShack</a>
           </div>
 
+          <!-- Navbar -->
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li><a href="#/">Home</a></li>
+              <li><a href="#/customers">Customers</a></li>
             </ul>
           </div>
+
         </div>
       </div>
     </div>
 
+    <!-- Content -->
     <div class="container">
     <div ng-view=""></div>
     </div>
 
+    <!-- Footer -->
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-apple"></span>Thanks from the Pizza Shack!</p>
       </div>
     </div>
 
@@ -89,6 +93,7 @@
         <script src="scripts/controllers/deliveries.js"></script>
         <script src="scripts/controllers/customers.js"></script>
         <script src="scripts/services/customers.js"></script>
+        <script src="scripts/services/customerrepository.js"></script>
         <!-- endbuild -->
 </body>
 </html>
