Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>PizzaShack by ianchute</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
+    <div class="wrapper">
       <header>
         <h1>PizzaShack</h1>
         <p></p>
+
+        <p class="view"><a href="https://github.com/ianchute/PizzaShack">View the Project on GitHub <small>ianchute/PizzaShack</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/ianchute/PizzaShack/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ianchute/PizzaShack/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ianchute/PizzaShack">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/ianchute/PizzaShack" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/ianchute/PizzaShack/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/ianchute/PizzaShack/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
         <h1>
 <a id="simple-spa-website-for-continuous-self-improvement" class="anchor" href="#simple-spa-website-for-continuous-self-improvement" aria-hidden="true"><span class="octicon octicon-link"></span></a>Simple SPA Website For Continuous Self-Improvement</h1>
@@ -49,6 +38,7 @@
 <li>SQL Server 2012</li>
 <li>msysgit</li>
 <li>NodeJS (version 0.10.36)</li>
+<li>yo, bower, grunt</li>
 </ol>
 
 <p>I made this for my own continuous self-improvement.
@@ -65,29 +55,30 @@ Currently, it is still at its infant stage and it doesn't do much.</p>
 <ol>
 <li>Open the solution.</li>
 <li>Build the solution.</li>
-<li>Install <a href="http://nodejs.org/dist/v0.10.0/x64/node-v0.10.36-x64.msi">http://nodejs.org/dist/v0.10.0/x64/node-v0.10.36-x64.msi</a> (or, the 32-bit one)
--- if you have another version, you will need to uninstall it so that the yeoman scaffolder will work properly.
+<li>Install <a href="http://nodejs.org/dist/v0.10.0/x64/node-v0.10.36-x64.msi">http://nodejs.org/dist/v0.10.0/x64/node-v0.10.36-x64.msi</a> (or, the 32-bit one)<br>
+-- if you have another version, you will need to uninstall it so that the yeoman scaffolder will work properly.<br>
 (If you had NodeJS before, ensure that %appdata%/npm and %appdata%/npm-cache are both empty)</li>
 <li>Install msysgit </li>
 <li>Add mysysgit's bin and cmd folders to the PATH environmental variable</li>
-<li>In the FrontEnd Folder, execute <b>npm install &amp; bower install</b>
+<li>In the Frontend Folder, execute <b>npm install</b>
 </li>
+<li>Install bower by executing <b>npm install bower</b>
+</li>
+<li><b>bower install</b></li>
 <li><b>npm install grunt</b></li>
-<li>Attach the database (Database/PizzaShack.mdf) to your SQL server installation (.)
-(NOTE: depending on your setup, you may need to fix the connection string in the project)</li>
-<li>To run the website:
-First, run the backend (F5/F11 in Visual Studio)
-Then execute <b>grunt serve</b> within the Frontend folder.</li>
+<li>To run the website:<br>
+ First, run the backend (F5/F11 in Visual Studio).<br>
+ Then execute <b>grunt serve</b> within the Frontend folder.</li>
 </ol>
 
 <p>For any problems encountered, contact <a href="mailto:ianchute@hotmail.com">ianchute@hotmail.com</a></p>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/ianchute">ianchute</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/ianchute">ianchute</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
