Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>PizzaShack by ianchute</title>
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>PizzaShack by ianchute</title>
   </head>
+
   <body>
-    <div class="wrapper">
+    <a id="forkme_banner" href="https://github.com/ianchute/PizzaShack">View on GitHub</a>
+    <div class="shell">
+
       <header>
-        <h1>PizzaShack</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/ianchute/PizzaShack">View the Project on GitHub <small>ianchute/PizzaShack</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/ianchute/PizzaShack/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ianchute/PizzaShack/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ianchute/PizzaShack">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>PizzaShack</h1>
+            <h2></h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </header>
-      <section>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/ianchute/PizzaShack/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/ianchute/PizzaShack/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h1>
 <a id="simple-spa-website-for-continuous-self-improvement" class="anchor" href="#simple-spa-website-for-continuous-self-improvement" aria-hidden="true"><span class="octicon octicon-link"></span></a>Simple SPA Website For Continuous Self-Improvement</h1>
 
@@ -73,12 +91,21 @@ Currently, it is still at its infant stage and it doesn't do much.</p>
 
 <p>For any problems encountered, contact <a href="mailto:ianchute@hotmail.com">ianchute@hotmail.com</a></p>
       </section>
+
       <footer>
-        <p>This project is maintained by <a href="https://github.com/ianchute">ianchute</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/ianchute">ianchute</a> can be found on <a href="https://github.com/ianchute/PizzaShack">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
