--- a/Frontend/app/index.html
+++ b/Frontend/app/index.html
@@ -2,7 +2,8 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>PizzaShack</title>
+    <base href="/" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -12,14 +13,15 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/wobblebar.css" type="text/css">
+    <link rel="stylesheet" href="styles/wobblebar.css" type="text/css">
+    <link rel="stylesheet" href="styles/three-quarters.css" type="text/css">
     <!-- endbuild -->
 </head>
 <body ng-app="frontendApp">
-    <div>
+    <div ng-controller="GlobalCtrl">
         <!--[if lt IE 7]>
           <p class="browsehappy">
-            You are using an <strong>outdated</strong> browser. 
+            You are using an <strong>outdated</strong> browser.
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
           </p>
         <![endif]-->
@@ -28,26 +30,10 @@
             <div class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-
-                        <!-- Hamburger -->
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#/">PizzaShack</a>
+                        <ps-hamburger></ps-hamburger>
+                        <a class="navbar-brand" href="/">PizzaShack</a>
                     </div>
-
-                    <!-- Navbar -->
-                    <div class="collapse navbar-collapse" id="js-navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a ng-href="#/">Home</a></li>
-                            <li><a ng-href="#/flavors">Pizza Flavors</a></li>
-                            <li><a ng-href="#/customers">Customers</a></li>
-                            <li><a ng-href="#/deliveryPersons">Delivery Personnel</a></li>
-                        </ul>
-                    </div>
+                    <ps-navbar></ps-navbar>
                 </div>
             </div>
         </div>
@@ -67,7 +53,7 @@
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-        <script>
+        <!--<script>
             !function (A, n, g, u, l, a, r) {
                 A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
                     (A[l].q = A[l].q || []).push(arguments)
@@ -77,7 +63,7 @@
 
             ga('create', 'UA-XXXXX-X');
             ga('send', 'pageview');
-        </script>
+        </script>-->
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
@@ -96,18 +82,30 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/pizzas.js"></script>
-        <script src="scripts/controllers/deliveries.js"></script>
         <script src="scripts/controllers/customers.js"></script>
-        <script src="scripts/services/customers.js"></script>
         <script src="scripts/services/customerrepository.js"></script>
         <script src="scripts/services/apipath.js"></script>
         <script src="scripts/services/pingservice.js"></script>
-        <script src="scripts/controllers/global.js"></script>
         <script src="scripts/controllers/deliverypersons.js"></script>
         <script src="scripts/services/deliverypersonrepository.js"></script>
         <script src="scripts/controllers/flavors.js"></script>
         <script src="scripts/services/flavorrepository.js"></script>
+        <script src="scripts/directives/psaddbutton.js"></script>
+        <script src="scripts/directives/pstable.js"></script>
+        <script src="scripts/directives/psaddmodal.js"></script>
+        <script src="scripts/directives/psdetailsmodal.js"></script>
+        <script src="scripts/directives/pseditmodal.js"></script>
+        <script src="scripts/directives/psdeletemodal.js"></script>
+        <script src="scripts/directives/psnavbar.js"></script>
+        <script src="scripts/controllers/global.js"></script>
+        <script src="scripts/directives/pshamburger.js"></script>
+        <script src="scripts/directives/psloading.js"></script>
+        <script src="scripts/services/statuscodeservice.js"></script>
+        <script src="scripts/directives/psdetailsbutton.js"></script>
+        <script src="scripts/directives/pseditbutton.js"></script>
+        <script src="scripts/directives/psdeletebutton.js"></script>
+        <script src="scripts/directives/pstitle.js"></script>
+        <script src="scripts/controllers/basedata.js"></script>
         <!-- endbuild -->
     </div>
 </body>
